GitHub-timetracker/react-app/src/styles/app.css
html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden; 
    font-family: "Red Hat Display", sans-serif;
}


.app-content-wrapper {
    color: rgb(247, 247, 247);
    display: flex;
    place-items: center;
    height: 100vh;
    background: #f3f4f6;
    padding: 20px;
    padding-top: 0px;
    flex-direction: column;
    gap: 20px;
    background-color: #121212;
    overflow: hidden;
}


::-webkit-scrollbar{
    width: 10px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: #888;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

